# grocery_tracker

./: .gitignore  LICENSE  pyproject.toml
grocery/groceries/: admin.py  forms.py  models.py  urls.py  views.py
grocery/groceries/migrations/: 0001_initial.py  0002_category_description.py
grocery/groceries/templates/groceries/: add_item.html  base.html  category_detail.html  category_edit.html  index.html  item_list.html
grocery/grocery/: settings.py  urls.py
