[tool.poetry]
name = "grocery-tracker"
version = "0.1.0"
description = ""
authors = ["Letlaka Tsotetsi <Letlaka.t@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.7"
crispy-bootstrap5 = "^2024.2"
django-crispy-forms = "^2.3"
django-dbbackup = "^4.1.0"
pillow = "^10.4.0"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"
django-decouple = "^2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
